--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
 <body>
 
   <!-- Add your site or application content here -->
-<style>
-  body{
-    background: url("LilGod.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-</style>
+
   <body>
   <section>
+    <ul>
+      <li><a class = "active" href = "index.html">Home</a></li>
+      <li class = "dropdown">
+        <a href = "https://www.youtube.com/channel/UCC1aXoLn8zzqalZXd58xMQw">Series of Unfortunate Events</a>
+        <div class = "dropdown-content">
+          <a href = "https://www.youtube.com/watch?v=Te4VzNLCyEo">Oh God</a>
+          <a href = "https://www.youtube.com/watch?v=aD4ZZagbHT0">Please Stop This</a>
+        </div>
+      </li>
+    </ul>
   <h1 style="Font-family:Calibri; Font-size:40px; color:white">
     Welcome To The Website of The Legend Himself
   </h1>
