Changed alignment of some objects

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
       Hello there, the Legend Himself here, I am very proud to present this website to you humans.
       <br>I hope you guys enjoy your time here!
     </p>
+  <form>
+    Enter Secret Password:<input type = "text" id ="demo">
+  </form>
   <canvas id="gc" width ="400px" height="400px"></canvas>
-  <input type = "text" id ="demo">
-  <p class = "score" id = "score"></p>
+  <pre class = "score" id = "score"></pre>
 
 
 
