Added headers for the parallax page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class = "homepage">
 
   <!-- Add your site or application content here -->
-    <div class="navbar">
+    <div class="navbarHome">
       <a  class = "active" href = "index.html">Home</a>
       <a href = "parallax.html">Parallax</a>
       <div class = "dropdown">
