--- a/parallax.html
+++ b/parallax.html
@@ -16,20 +16,36 @@
 <body>
 
 <div class = "parallax">
-  <div class = "navbar">
+
+  <div class = "navbarPar">
+
   <a href = "index.html">Home</a>
   <a class = "active" href = "parallax.html">Parallax</a>
+
   <div class = "dropdown">
     <button class = "dropbtn" onclick = "myFunction()">Series of Unfortunate Events</button>
     <div class = "dropdown-content" id = "myDropdown">
       <a href = "https://www.youtube.com/watch?v=Te4VzNLCyEo">Oh God</a>
       <a href = "https://www.youtube.com/watch?v=aD4ZZagbHT0">Please Stop This</a>
     </div>
+
   </div>
+
   </div>
+
+  <div class = "container">
+    <div class = "parallaxHeader">Parallax Page</div>
+    <div class = "parallaxSubHeader">Simply The Worst</div>
+    <a href = "https://www.youtube.com/watch?v=CL4wHvotF1g" class = "parallaxButton">Biggest Loss</a>
+  </div>
+
 </div>
 
-<div class = "parallaxPage-section1" >
+<div class = "parallaxPage-section1">
+
+</div>
+
+<div class = "parallax">
 
 </div>
 
