Fixed the headers in the parallax page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </form>
   <canvas id="gc" width ="400px" height="400px"></canvas>
   <pre class = "score" id = "score"></pre>
+  <a style="Font-family:'Times New Roman'; Font-size:14px; color:white" href = "https://www.youtube.com/watch?v=xGmXxpIj6vs"> Source on how to create snake.</a>
 
 
 
