--- a/parallax.html
+++ b/parallax.html
@@ -43,6 +43,10 @@
 
 <div class = "parallaxPage-section1">
 
+  <div class = "container">
+    <h1 class = "section1-Header">Pointless Paragraph</h1>
+  </div>
+
 </div>
 
 <div class = "parallax">
