Added a p5 page where I will test out p5 and make a mini game.

--- a/parallax.html
+++ b/parallax.html
@@ -21,6 +21,7 @@
 
   <a href = "index.html">Home</a>
   <a class = "active" href = "parallax.html">Parallax</a>
+  <a href = "P5.js%20Test.html">P5.js Testing Grounds</a>
 
   <div class = "dropdown">
     <button class = "dropbtn" onclick = "myFunction()">Series of Unfortunate Events</button>
