--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="navbarHome">
       <a  class = "active" href = "index.html">Home</a>
       <a href = "parallax.html">Parallax</a>
+      <a href = "P5.js%20Test.html">P5.js Testing Grounds</a>
       <div class = "dropdown">
         <button class = "dropbtn" onclick = "myFunction()">Series of Unfortunate Events</button>
         <div class = "dropdown-content" id = "myDropdown">
