Added to the pointless paragraph

--- a/parallax.html
+++ b/parallax.html
@@ -11,51 +11,71 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link rel ="shortcut icon" href ="LilGod.jpg" type = "image/jpg">
+  <link rel="shortcut icon" href="LilGod.jpg" type="image/jpg">
 </head>
 <body>
 
-<div class = "parallax">
+<div class="parallax">
 
-  <div class = "navbarPar">
+  <div class="navbarPar">
 
-  <a href = "index.html">Home</a>
-  <a class = "active" href = "parallax.html">Parallax</a>
-  <a href = "P5.js%20Test.html">P5.js Testing Grounds</a>
+    <a href="index.html">Home</a>
+    <a class="active" href="parallax.html">Parallax</a>
+    <a href="P5.js%20Test.html">P5.js Testing Grounds</a>
 
-  <div class = "dropdown">
-    <button class = "dropbtn" onclick = "myFunction()">Series of Unfortunate Events</button>
-    <div class = "dropdown-content" id = "myDropdown">
-      <a href = "https://www.youtube.com/watch?v=Te4VzNLCyEo">Oh God</a>
-      <a href = "https://www.youtube.com/watch?v=aD4ZZagbHT0">Please Stop This</a>
+    <div class="dropdown">
+      <button class="dropbtn" onclick="myFunction()">Series of Unfortunate Events</button>
+      <div class="dropdown-content" id="myDropdown">
+        <a href="https://www.youtube.com/watch?v=Te4VzNLCyEo">Oh God</a>
+        <a href="https://www.youtube.com/watch?v=aD4ZZagbHT0">Please Stop This</a>
+      </div>
+
     </div>
 
   </div>
 
-  </div>
-
-  <div class = "container">
-    <div class = "parallaxHeader">Parallax Page</div>
-    <div class = "parallaxSubHeader">Simply The Worst</div>
-    <a href = "https://www.youtube.com/watch?v=CL4wHvotF1g" class = "parallaxButton">Biggest Loss</a>
-  </div>
-
-</div>
-
-<div class = "parallaxPage-section1">
-
-  <div class = "container">
-    <h1 class = "section1-Header">Pointless Paragraph</h1>
+  <div class="container">
+    <div class="parallaxHeader">Parallax Page</div>
+    <div class="parallaxSubHeader">Simply The Worst</div>
+    <a href="https://www.youtube.com/watch?v=CL4wHvotF1g" class="parallaxButton">Biggest Loss</a>
   </div>
 
 </div>
 
-<div class = "parallax">
+<div class="parallaxPage-section1">
+
+  <div class="container">
+    <h1 class="section1-Header">Pointless Paragraph</h1>
+    <div class="section1-Paragraph">
+      <p>Welcome! Welcome! I hope you are enjoying your stay here at the wonderful website of
+        The Legend Himself. During this section, you will get to learn the true definition of utter insanity because I
+        am about to go on a tangent of just random nonsense. Let us begin!</p>
+      <p>It has been said that when the skies starts to rain cats and dogs that it is known to be raining really heavily
+        outside, but who said that it was water that it is falling from the sky. It is literally raining cats and dogs
+        outside and oh my dear GOD, it is not a pleasant sight. As the Great One once said, "The cornflakes are soggy",
+        meaning... wait a minute... what in god's green earth does that even mean. You probably wondering why in my mind
+        am I even reading this but that's not the point so I'll just give you some back story to this catastrophic
+        event.</p>
+      <p>This devastating phenomenon all starting back in 2005 when I was just a mere 5 year old. As a child I had no
+        superpowers, if that's even relevant but whatever, and I thought it was cool to throw rocks in a random
+        directions. I know, I was weird as a kid don't blame me ):<. Coincidentally, one of my rocks hit a dog that was
+        approximately 50.123 degrees above the ground and 10 degrees to my right which then ricocheted 80.748 degrees to
+        the left and hit a cat as well. Of course both the cat and dog were pissed beyond belief and you probably
+        thought that I would get chased by them, but you are damn WRONG sir/ma'am! It turns out they were deities and
+        forever cursed me and the human race by raining cats and dogs. Great you sure got me there dog/cat god.</p>
+      <p>Well the moral of the story? Ummm....Don't throw rocks? The End!</p>
+      <p></p>
+    </div>
+  </div>
+
+</div>
+
+<div class="parallax">
 
 </div>
 
 
-<script src = "js/dropdown.js"></script>
+<script src="js/dropdown.js"></script>
 <script src="js/plugins.js"></script>
 </body>
 </html>
