Finished parallax page, removed Michael Bay parody video because it was too large

--- a/parallax.html
+++ b/parallax.html
@@ -5,6 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Parallax</title>
   <link rel="stylesheet" href="css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -69,13 +70,73 @@
   </div>
 
 </div>
+<!--LO l-->
+<!--test-->
 
-<div class="parallax">
+<div class="parallaxPage-section2">
+
+  <div class="container">
+    <h1>Watch My Parallax Meme: Bamboozled</h1>
+
+    <div class="row">
+      <video id="Bamboozled" class="video" controls>
+        <source src="video/Bamboozled.mp4" type="video/mp4">
+      </video>
+      <div class="sliderAlignment">
+        <input type="range" min="0" max="100" value="100" class="slider" id="audioadjust">
+        <p id="audiolevel"></p>
+      </div>
+    </div>
+
+    <div class="section1-Paragraph">
+      <p>I made this for my grade 12 media arts class.</p>
+    </div>
+
+  </div>
+
+</div>
+
+<div class="parallaxPage-credits">
+
+  <div class="creditsMargin">
+
+    <div class="row">
+
+      <div class="container">
+        <h1 class="creditsHeader">Credits</h1>
+        <p class="creditsParagraph">
+          Well well well, congratulations! You made it to the end. I hope you enjoyed your stay here on
+          my test website!
+        </p>
+      </div>
+
+      <div class="container">
+        <p class="creditsParagraph">
+          All jokes aside, I do not intend to make this website my portfolio. As I said before, this website's only
+          purpose was to learn HTML, CSS, and JS. In school, I have only worked with Java, Processing, and a little bit
+          of C. It is fun design this website and I will continue to keep updating it.
+        </p>
+      </div>
+
+      <div class="container">
+        <h1 class = "creditsHeader">Information</h1>
+        <p class = "creditsParagraph">
+          Github:
+          <br>https://github.com/TheLegendHimself
+          <br>Email:
+          <br>bennylam6@gmail.com
+        </p>
+      </div>
+
+    </div>
+
+  </div>
 
 </div>
 
 
 <script src="js/dropdown.js"></script>
 <script src="js/plugins.js"></script>
+<script src="js/volumeChanger.js"></script>
 </body>
 </html>
