Changed the name of the website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>The Legend Himself</title>
+  <title>Daw Yeong</title>
   <link rel="stylesheet" href="css/main.css">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,7 +33,7 @@
 
 
   <h1 style="Font-family:Calibri; Font-size:40px; color:white">
-    Welcome To The Website of The Legend Himself
+    Welcome To The Website of Daw Yeong
   </h1>
     <p style="Font-family:'Times New Roman'; Font-size:14px; color:white">
       Hello there, this is a test website I am creating for the sole reasoning to learning a little bit of HTML, CSS, and JS.
