Added a download link for PTB

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <canvas id="gc" width ="400px" height="400px"></canvas>
   <pre class = "score" id = "score"></pre>
   <a style="Font-family:'Times New Roman'; Font-size:14px; color:white" href = "https://www.youtube.com/watch?v=xGmXxpIj6vs"> Source on how to create snake.</a>
+  <a style="Font-family:'Times New Roman'; Font-size:14px; color:white" href = "PTB%20Game.jar" download> <br> Download the Peety The Beefy game. Made using Libgdx</a>
 
 
 
