--- a/parallax.html
+++ b/parallax.html
@@ -114,7 +114,7 @@
         <p class="creditsParagraph">
           All jokes aside, I do not intend to make this website my portfolio. As I said before, this website's only
           purpose was to learn HTML, CSS, and JS. In school, I have only worked with Java, Processing, and a little bit
-          of C. It is fun design this website and I will continue to keep updating it.
+          of C. It was fun designing this website and I will continue to keep updating it.
         </p>
       </div>
 
@@ -122,7 +122,7 @@
         <h1 class = "creditsHeader">Information</h1>
         <p class = "creditsParagraph">
           Github:
-          <br>https://github.com/TheLegendHimself
+          <br>https://github.com/DawYeong
           <br>Email:
           <br>bennylam6@gmail.com
         </p>
